# semantic-ai-docker

./: README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/src/backend/: main.py
frontend/: .env  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: QuerySuggestion.tsx  ResultsTable.tsx  SearchInterface.tsx  SearchMetrics.tsx  VennDiagram.tsx  mode-toggle.tsx
frontend/src/components/ui/: button-with-tooltip.tsx  button.tsx  calendar.tsx  card.tsx  date-picker.tsx  input.tsx  separator.tsx  table.tsx
