[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Tara Petric", email = "tara.petric@lightsoft.co.rs" }
]
dependencies = [
    "fastapi>=0.115.8",
    "uvicorn>=0.34.0",
    "pydantic>=2.10.6",
    "requests>=2.32.3",
    "pandas>=2.2.3",
    "openpyxl>=3.1.5",
    "python-multipart>=0.0.20",
    "fuzzywuzzy>=0.18.0",
    "python-levenshtein>=0.26.1",
     "biopython>=1.83",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]
